test/resources/Typecheck/WrongType.expected
WrongType.java:3: error: incompatible types: int cannot be converted to boolean
WrongType.java:4: error: incompatible types: C3 cannot be converted to boolean
WrongType.java:5: error: bad operand types for binary operator '+'
  first type:  boolean
  second type: int
WrongType.java:7: error: bad operand types for binary operator '&&'
  first type:  boolean
  second type: int
WrongType.java:7: error: incompatible types: boolean cannot be converted to int
WrongType.java:33: error: method f in class C3 cannot be applied to given types;
  required: int,int,int
  found: int,int
  reason: actual and formal argument lists differ in length
WrongType.java:34: error: method f in class C3 cannot be applied to given types;
  required: int,int,int
  found: int,int,int,boolean
  reason: actual and formal argument lists differ in length
WrongType.java:35: error: incompatible types: boolean cannot be converted to int
WrongType.java:23: error: incompatible types: C1 cannot be converted to C2
WrongType.java:25: error: incompatible types: C1 cannot be converted to C2
